--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,15 @@ python:
   - 3.6
   - 3.5
 
-# command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
   - pip install -r requirements_dev.txt
+  - pip install -e .
   - pip install pytest pytest-cov coveralls
 
 # command to run tests, e.g. python setup.py test
 script:
-  - python -m pytest --cov tests/
+  # - python -m pytest tests/
+  - pytest --cov=hotsoss/
+
+after_success:
   - coveralls
