--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -11,5 +11,6 @@ recursive-exclude * *.py[co]
 recursive-include docs *.rst conf.py Makefile make.bat *.jpg *.png *.gif
 
 graft hotsoss/files *
+graft files *
 
 global-exclude *.pyc 
